--- a/src/app/modules/request-approval/components/item-card2/item-card2.component.html
+++ b/src/app/modules/request-approval/components/item-card2/item-card2.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <div>
                     <div class="label-gray">Harga Belanja</div>
-                    <div class="label-gray-2">{{item.grand_total| rupiah : 'bulat'}}
+                    <div class="label-gray-2">{{item.purchase_amount| rupiah : 'bulat'}}
                     </div>
                 </div>
             </div>
