--- a/src/app/layout/components/login-card2/login-card2.component.scss
+++ b/src/app/layout/components/login-card2/login-card2.component.scss
@@ -2,7 +2,10 @@
 
 .rounded-corner {
 	border-radius: 80px;
-	padding: 20px;
+	// padding: 20px;
+	height:612px;
+	width:450px;
+	padding:10px;
 }
 
 .rounded-gray {
