Revisi Bugs: [Transaksi] Status Item Dikirim Is Not Shown

--- a/src/app/modules/transaction/components/badge/badge.component.html
+++ b/src/app/modules/transaction/components/badge/badge.component.html
@@ -13,6 +13,7 @@
 				<div *ngSwitchCase="'REJECTED'">Ditolak</div>
 				<div *ngSwitchCase="'CLOSED'">Diterima & Selesai</div>
 				<div *ngSwitchCase="'PROCESS'">Diproses</div>
+				<div *ngSwitchCase="'DELIVER'">Dikirim</div>
 				<div *ngSwitchCase="'RECEIVED'">Sampai</div>
 				<div *ngSwitchDefault>Diproses</div>
 			</container-element>
