--- a/src/app/layout/components/login-card2/login-card2.component.html
+++ b/src/app/layout/components/login-card2/login-card2.component.html
@@ -66,9 +66,13 @@
                     <div class="d-flex justify-content-center">
                         <ng-otp-input (onInputChange)="onOtpChange($event)"
                             #ngOtpInput
-                            [config]="{length:6}"></ng-otp-input>
+                            class="d-flex"
+                            style="border: 1px;"
+                            [config]="{length:6, inputStyles:{'border-top': '0px', 'border-left':'0px','border-right':'0px', 'border-bottom':'2px solid #a9a9a9', 'border-radius':'0px','width':'56px'}}">
+                        </ng-otp-input>
                     </div>
 
+                    <wsv wide="13px"></wsv>
 
                     <div class="d-flex justify-content-center">
                         Tidak Terima Nomor OTP?
