--- a/src/app/layout/components/kirim-ulang-button/kirim-ulang-button.component.html
+++ b/src/app/layout/components/kirim-ulang-button/kirim-ulang-button.component.html
@@ -2,4 +2,4 @@
     class='grey'>Kirim Ulang</span>
 <span *ngIf="!isCountingDown"
     class='kirimulang'
-    (click)="buttonClick()">Kirim Ulang</span>
+    (click)="buttonClick()"><u>Kirim Ulang</u></span>
