--- a/src/app/shared/components/pop-up-request-approval/pop-up-request-approval.component.html
+++ b/src/app/shared/components/pop-up-request-approval/pop-up-request-approval.component.html
@@ -15,7 +15,7 @@
 		<div id="popup-option-button">
 			<div align="center">
 				<div class="divbutton-right"
-					(click)="goesToPage(modalData.pageOrigin)">Request Approval</div>
+					(click)="goesToPage(modalData.pageOrigin)">Tetap di halaman ini</div>
 			</div>
 		</div>
 	</div>
