--- a/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
+++ b/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
@@ -56,7 +56,7 @@
 						<div class="label-4">{{item?.sell_price|rupiah}}</div>
 						<wsv wide="7px"></wsv>
 
-						<div *ngIf="tampilkanHargaCoret()">
+						<div *ngIf="tampilkanHargaCoret()"
 							class="label-1 coret">Jumlah: {{item?.initial_quantity}} Barang
 						</div>
 						<div class="label-1">Jumlah: {{item?.quantity}} barang</div>
