--- a/src/app/modules/transaction/components/badge/badge.component.html
+++ b/src/app/modules/transaction/components/badge/badge.component.html
@@ -15,7 +15,7 @@
 				<div *ngSwitchCase="'PROCESS'">Diproses</div>
 				<div *ngSwitchCase="'WAITING_RETURN'">Dibatalkan</div>
 				<div *ngSwitchCase="'DELIVER'">Dikirim</div>
-				<div *ngSwitchCase="'RECEIVED'">Diterima</div>
+				<div *ngSwitchCase="'RECEIVED'">Sampai</div>
 				<div *ngSwitchDefault>Diproses</div>
 			</container-element>
 
