update [Dashboard] Data Chart improvement &  invoice

--- a/src/app/modules/account/components/output-graph/output-graph.component.html
+++ b/src/app/modules/account/components/output-graph/output-graph.component.html
@@ -1,10 +1,20 @@
 <figure class="highcharts-figure">
+    <div class="header">
+        <div class="d-flex justify-content-between title">
+            <div class="text">Pembelian Perusahaan</div>
+            <div class="text-price">Total {{totals|rupiah}}</div>
+        </div>
+        <horizontal-line></horizontal-line>
+    </div>
     <div id="container"></div>
     <p class="highcharts-description">
     </p>
 </figure>
 
 <figure class="highcharts-figure">
+    <div class="d-flex justify-content-between">
+        <div class="text-user">Pembelian per User</div>
+    </div>
     <div id="container2"></div>
     <p class="highcharts-description">
     </p>
