--- a/src/app/modules/account/components/output-graph/output-graph.component.scss
+++ b/src/app/modules/account/components/output-graph/output-graph.component.scss
@@ -1,33 +1,70 @@
-hcharts-figure, .highcharts-data-table table {
-  min-width: 360px;
-  max-width: 800px;
-  margin: 1em auto;
+figure.highcharts-figure {
+	margin-top: 30px;
+}
+.highcharts-data-table table {
+	min-width: 360px;
+	max-width: 800px;
+	margin: 1em auto;
 }
 
 .highcharts-data-table table {
-font-family: Verdana, sans-serif;
-border-collapse: collapse;
-border: 1px solid #EBEBEB;
-margin: 10px auto;
-text-align: center;
-width: 100%;
-max-width: 500px;
+	font-family: Verdana, sans-serif;
+	border-collapse: collapse;
+	border: 1px solid #ebebeb;
+	margin: 10px auto;
+	text-align: center;
+	width: 100%;
+	max-width: 500px;
 }
 .highcharts-data-table caption {
-  padding: 1em 0;
-  font-size: 1.2em;
-  color: #555;
+	padding: 1em 0;
+	font-size: 1.2em;
+	color: #555;
 }
 .highcharts-data-table th {
-font-weight: 600;
-  padding: 0.5em;
+	font-weight: 600;
+	padding: 0.5em;
 }
-.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
-  padding: 0.5em;
+.highcharts-data-table td,
+.highcharts-data-table th,
+.highcharts-data-table caption {
+	padding: 0.5em;
 }
-.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
-  background: #f8f8f8;
+.highcharts-data-table thead tr,
+.highcharts-data-table tr:nth-child(even) {
+	background: #f8f8f8;
 }
 .highcharts-data-table tr:hover {
-  background: #f1f7ff;
+	background: #f1f7ff;
+}
+
+.header {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.text {
+	color: #606060;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 22px;
+}
+.text-user {
+	color: #606060;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 22px;
+}
+.text-price {
+	color: #606060;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 22px;
 }
