--- a/src/app/modules/account/pages/account-tagihan-print/account-tagihan-print.component.html
+++ b/src/app/modules/account/pages/account-tagihan-print/account-tagihan-print.component.html
@@ -1,5 +1,16 @@
-<div style="background-color: white;">
+<div class="container"
+    style="background-color: white;">
     <wsv wide="50px"></wsv>
+    <div class="d-flex">
+        <div (click)="addPdf()"
+            class="d-flex icon-pdf">
+            <img src="../../../../assets/image/icons/icon-pdf.png">
+        </div>
+        <div (click)="addPrint()"
+            class="d-flex icon-print">
+            <img src="../../../../assets/image/icons/icon-print.png">
+        </div>
+    </div>
     <div id="scroll"></div>
-    <wsv wide="50px"></wsv>
+    <!-- <wsv wide="50px"></wsv> -->
 </div>
