update [Dashboard] Data Chart improvement &  invoice

--- a/src/app/modules/account/pages/account-tagihan-print/account-tagihan-print.component.html
+++ b/src/app/modules/account/pages/account-tagihan-print/account-tagihan-print.component.html
@@ -1,7 +1,8 @@
-<div class="container"
+<div id="container"
+    class="container"
     style="background-color: white;">
     <wsv wide="50px"></wsv>
-    <div class="d-flex">
+    <div class="d-flex button-print">
         <div (click)="addPdf()"
             class="d-flex icon-pdf">
             <img src="../../../../assets/image/icons/icon-pdf.png">
