--- a/src/app/modules/account/pages/account-layout/account-layout.component.scss
+++ b/src/app/modules/account/pages/account-layout/account-layout.component.scss
@@ -3,6 +3,7 @@
 
 #account-layout {
 	height: auto;
+	overflow: hidden;
 }
 
 #left-wrapper {
@@ -55,4 +56,5 @@
 	padding-left: 20px;
 	padding-right: 20px;
 	background: #fdfdfd;
+	height: 100vh;
 }
