--- a/src/app/modules/account/components-kredit-perusahaan/silinder/silinder.component.scss
+++ b/src/app/modules/account/components-kredit-perusahaan/silinder/silinder.component.scss
@@ -5,9 +5,9 @@
 #silinder-wrapper {
 	background: #ffffff;
 	width: 230px;
-	border: 0.2px solid #a9a9a9;
+	border: 0.1px solid #e0e0e0;
 	box-sizing: border-box;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+	box-shadow: 0px 4px 4px rgba(179, 179, 179, 0.582);	
 	border-radius: 48px;
 	padding-left: 14px;
 	padding-right: 14px;
