--- a/src/app/modules/account/pages/account-tagihan/account-tagihan.component.scss
+++ b/src/app/modules/account/pages/account-tagihan/account-tagihan.component.scss
@@ -7,6 +7,39 @@
 	font-weight: bold;
 	font-size: 20px;
 	line-height: 23px;
-
 	color: #606060;
+}
+
+.datarow{
+	margin-top:100px;
+	width:940px;	
+	background: #FFFFFF;
+	box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
+	border-radius: 10px;
+}
+
+#filter-wrapper {
+	width: 500px;
+}
+
+#top-fixed {
+	position: fixed;
+	width: 960px;
+	background-color: $putih-tok;
+	z-index: 1;
+	padding:20px;
+	
+}
+
+#left-container {
+	height: 100%;
+	overflow: scroll;
+}
+
+#right-container {
+	overflow: scroll;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+#left-container::-webkit-scrollbar {
+	display: none;
 }
