--- a/src/app/modules/account/pages/account-tagihan-print/account-tagihan-print.component.html
+++ b/src/app/modules/account/pages/account-tagihan-print/account-tagihan-print.component.html
@@ -1,8 +1,6 @@
-<div id="container"
-    class="container"
-    style="background-color: white;">
-    <wsv wide="50px"></wsv>
+<div class="container">
     <div class="d-flex button-print">
+        <wsv height="30px"></wsv>
         <div (click)="addPdf()"
             class="d-flex icon-pdf">
             <img src="../../../../assets/image/icons/icon-pdf.png">
@@ -12,6 +10,11 @@
             <img src="../../../../assets/image/icons/icon-print.png">
         </div>
     </div>
+</div>
+<div id="container"
+    class="container"
+    style="background-color: white;">
+    <wsv wide="50px"></wsv>
     <div id="scroll"></div>
     <!-- <wsv wide="50px"></wsv> -->
 </div>
