--- a/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
+++ b/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
@@ -59,7 +59,9 @@
                             <div>{{quantity}} Barang</div>
                         </div>
                     </div>
-                    <div id="item-price">{{productDetail?.sell_price * quantity|rupiah}}</div>
+                    <div class="d-flex"
+                        style="white-space: nowrap;"
+                        id="item-price">{{productDetail?.sell_price * quantity|rupiah}}</div>
                 </div>
 
             </div>
