--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -1,6 +1,7 @@
 <div id="main-wrapper">
 	<div class="rectangle-87">
-		<div class="d-flex header-wrapper align-items-center">
+		<div class="d-flex header-wrapper align-items-center"
+			style="padding-left :15px;">
 			<check-box-two [checked]="item.selected"
 				[allowChanges]="item.enableSelection"
 				(onClickEvent)="handleClickCheckbox($event)"
@@ -17,7 +18,8 @@
 			</div>
 
 		</div>
-		<div class="rectangle-86 w-100 d-flex">
+		<div class="rectangle-86 w-100 d-flex"
+			style="height: 135px;padding-bottom: 10px;padding-left: 15px;">
 			<img src='{{item.product_image}}'
 				(error)="onImgError($event)"
 				class="item-img">
@@ -31,7 +33,8 @@
 			</div>
 			<wsh wide="90px"></wsh>
 
-			<div class="d-flex align-items-end justify-content-end container-29">
+			<div class="d-flex align-items-end justify-content-end container-29"
+				*ngIf="!(item.availability == 'COMING_SOON' || item.availability == 'OUT_OF_STOCK')">
 				<img id="trash-can"
 					src="../../../../../assets/image/logo/trash-3.png"
 					(click)="deleteItem(dangerTpl, item)" />
@@ -48,7 +51,8 @@
 
 	<div id="above-masking"
 		*ngIf="item.availability == 'COMING_SOON' || item.availability == 'OUT_OF_STOCK'"
-		class="rectangle-87">
+		class="rectangle-87"
+		style="padding-bottom: 10px;">
 		<div class="d-flex flex-grow-1 flex-row-reverse align-items-end"
 			style="height: 100%;">
 			<div class="container-29">
