--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -20,7 +20,7 @@
 	<wsv wide="10px"></wsv>
 
 	<div class="d-flex justify-content-between">
-		<div class="font1">Fee</div>
+		<div class="font1">Fee ({{datacompany?.fee_percentage}}%)</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
@@ -43,7 +43,7 @@
 	<wsv wide="10px"></wsv>
 
 	<div class="d-flex justify-content-between">
-		<div class="font1">PPN</div>
+		<div class="font1">PPN ({{datacompany?.ppn_percentage}}%)</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
@@ -54,7 +54,7 @@
 	<wsv wide="10px"></wsv>
 
 	<div class="d-flex justify-content-between">
-		<div class="font1">PPh 23</div>
+		<div class="font1">PPh 23 ({{datacompany?.pph_percentage}}%)</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
