--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
@@ -6,11 +6,13 @@
 	background: #eeeeee;
 	border-radius: 10px;
 	padding-top: 10px;
-	margin-top: 15px;
+	margin-top: 25px;
+	filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.15));
 }
 
 #item-content {
 	width: 100%;
+	height: 150px;
 	background: #ffffff;
 	border-radius: 10px;
 	padding-top: 15px;
