--- a/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
@@ -40,14 +40,23 @@
 			[(ngModel)]="param.email">
 	</div>
 </div>
+
 <wsv wide="24px"></wsv>
 <horizontal-line></horizontal-line>
 <wsv wide="24px"></wsv>
-<red-button label="Tambah"
-	font="14px"
-	paddingtop="10px"
-	paddingbottom="10px"
-	paddingleft="0px"
-	paddingright="0px"
-	float="right"
-	(click)="submit()"></red-button>
+
+
+<div class="d-flex align-items-end flex-column bd-highlight mb-3">
+	<div class="p-2 bd-highlight"></div>
+	<div class="p-2 bd-highlight"></div>
+	<div class="mt-auto p-2 bd-highlight">
+		<red-button label="Tambah"
+			font="14px"
+			paddingtop="10px"
+			paddingbottom="10px"
+			paddingleft="0px"
+			paddingright="0px"
+			float="right"
+			(click)="submit()"></red-button>
+	</div>
+</div>
