Revisi Bugs: [Akun - Navigation Side Bar] - Floating Side Bar & Button Logout

--- a/src/app/modules/account/components/account-nav-item/account-nav-item.component.scss
+++ b/src/app/modules/account/components/account-nav-item/account-nav-item.component.scss
@@ -19,3 +19,10 @@
 	width: 230px;
 	color: $color-primary;
 }
+
+.grey {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 50px;
+	color: #A9A9A9;
+}
