Revisi Bugs: [Informasi Perusahaan] Scroll tidak bisa full sampai alamat terakhir

--- a/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
+++ b/src/app/modules/account/pages/account-info-perusahaan/account-info-perusahaan.component.html
@@ -14,7 +14,8 @@
     (click)="tambahAlamat()"></red-button>
 </div>
 <wsv wide="24px"></wsv>
-<div *ngFor="let address of addresses; index as i">
+<div *ngFor="let address of addresses; index as i"
+  style="overflow: auto;">
   <info-perusahaan-address-card [index]="i"
     [address]="address"
     (editEvent)="editAddress(address)"
