--- a/src/app/modules/account/pages/account-layout/account-layout.component.html
+++ b/src/app/modules/account/pages/account-layout/account-layout.component.html
@@ -5,28 +5,7 @@
     <div id="left-wrapper">
       <wsv wide="10px"></wsv>
 
-      <div id="sidebarleft">
-        <div class="d-flex justify-content-center">
-          <img id="logo-akun"
-            src="{{datauser?.profile_picture_url}}"
-            (error)="onImgError($event)">
-        </div>
-
-        <wsv wide="18px"></wsv>
-        <div class="d-flex justify-content-center">
-          <div id="position-label">{{datauser?.role_name}}</div>
-        </div>
-        <wsv wide="18px"></wsv>
-        <div class="d-flex justify-content-center">
-          <div id="name-label">{{datauser?.fullname}}</div>
-        </div>
-        <wsv wide="39px"></wsv>
-        <div class="d-flex">
-          <wsh wide="35px"></wsh>
-          <account-navigation-bar></account-navigation-bar>
-          <wsh wide="29px"></wsh>
-        </div>
-      </div>
+      <sidebar-account [datauser]="datauser"></sidebar-account>
 
 
     </div>
