--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@ body {
 }
 body {
 	margin: 0;
-	background-color: $main-background;
+	background-color: $main-background !important;
 }
 
 body.no-scroll {
