--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,7 +43,7 @@ button:focus {
 }
 
 .container {
-	max-width: 1280px;
+	max-width: 1280px !important;
 }
 
 .pojok-kanan-atas {
@@ -136,4 +136,15 @@ textarea:focus,
 select:focus,
 :focus {
 	outline: none;
+}
+
+//reset ngbdropdown
+.dropdown-menu {
+	background: transparent;
+	border: none;
+	padding: 0;
+	margin: 0;
+}
+.dropdown-toggle::after {
+	display: none !important;
 }
