--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -145,3 +145,5 @@
     <img src="../../../../../assets/image/icons/nestloading.gif"
         style="position: relative;width:50px;">
 </div>
+
+<item-telah-dihapus></item-telah-dihapus>
