--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -42,6 +42,7 @@
 				</div>
 				<div class="d-flex align-items-end justify-content-end"
 					*ngIf="isItemAvailable()">
+					<wsh wide="150px"></wsh>
 					<img id="trash-can"
 						src="../../../../../assets/image/logo/trash-3.png"
 						(click)="deleteItem(dangerTpl, item)" />
