--- a/src/styles-2/styles.scss
+++ b/src/styles-2/styles.scss
@@ -6,12 +6,14 @@
 	$background: 'none',
 	$border-radius: 0 0 0 0,
 	$padding: 0 0 0 0,
-	$opacity: 1
+	$opacity: 1,
+	$cursor: default
 ) {
 	background: $background;
 	border-radius: $border-radius;
 	padding: $padding;
 	opacity: $opacity;
+	cursor: $cursor;
 }
 
 @mixin text($font-size: 14px, $font-weight: 400, $color: $scorpion) {
