--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -28,7 +28,8 @@
 			<div class="d-flex flex-grow-1 justify-content-between">
 
 				<div>
-					<div class="label-2">
+					<div class="product_name"
+						(click)="itemClicked()">
 						{{item.product_name|truncate:90}}
 					</div>
 					<wsv wide="6px"></wsv>
